Fix text overflow w/ translation

--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -10,7 +10,7 @@
   right: 0;
   border-bottom-left-radius: 250px;
   height: 250px;
-  width: 60%;
+  width: 57%;
   overflow: hidden;
   background-image: url('/map.png');
   background-image: url('/map.webp');
